--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,22 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+#root{
+  display:flex;
+  height: 100vh;
+}
+.editor-container {
+  background-color: #f5f5f5;
+  margin:auto;
+  cursor:initial;
+  /* box-shadow: 0px 0px 6px 1px rgba(0,0,0,0.5); */
+  /* height:300px; */
+  padding: 5px;
+  font-size: 18px;
+  font-family: 'calibri', sans-serif;
+}
+.DraftEditor-root{
+  background-color:#fff;
+  margin-top: 5px;
+  padding: 10px;
+}
