--- a/src/components/media-objects/Hover.css
+++ b/src/components/media-objects/Hover.css
@@ -3,9 +3,17 @@
 }
 
 .parent:hover .child {
-    visibility: visible;
+  visibility: visible;
 }
 
-.ui.fluid.input > input {
-  font-weight: 700;
+.ui.fluid.input.bold > input {
+  font-weight: 700 !important;
+  border-width:0;
+  margin-top:-1px;
+}
+
+.ui.fluid.input.center > input {
+  width: 100% !important;
+  text-align: center !important;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
